# WikiCitationFixer

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  paste.txt  paste_corrected.txt  pyproject.toml  requirements.txt  wikipharm_fixer.py
.github/workflows/: ci.yml
browser-extension/: README.md  browser-polyfill.js  content.js  manifest.json
browser-extension/popup/: popup.css  popup.html  popup.js
tests/: conftest.py  test_cache.py  test_config.py  test_logger.py  test_main.py  test_modules.py  test_pipeline.py  test_services.py  test_sfn.py  test_shared.py  test_texts.py
tests/modules/: test_archive.py  test_authors.py  test_base_module.py  test_cleanup.py  test_dates.py  test_dedup.py  test_expand.py  test_ids.py  test_sort.py  test_spacing.py
tests/services/: test_arxiv.py  test_base.py  test_crossref.py  test_datacite.py  test_europe_pmc.py  test_ncbi.py  test_openalex.py  test_openlibrary.py  test_semantic_scholar.py  test_wayback.py
wikifix/: __init__.py  __main__.py  base.py  cache.py  config.py  field_utils.py  logger.py  pipeline.py  server.py  services.py
wikifix-extension/: build.mjs  package-lock.json  package.json  tsconfig.json
wikifix-extension/public/: browser-polyfill.js  manifest.json
wikifix-extension/src/: background.ts  browser.d.ts  content.ts  popup.css  popup.html  popup.ts
wikifix-extension/tests/: api.test.ts  archive.test.ts  authors.test.ts  cache.test.ts  cleanup.test.ts  content.test.ts  dates.test.ts  diff.test.ts  expand.test.ts  shared.test.ts  spacing.test.ts  texts.test.ts  (+1 more)
(+24 files in other folders)
