[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wikifix"
version = "3.0.0"
description = "Universal Wikipedia Citation Fixer — modular pipeline for CS1/CS2 templates"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Wolren", email = "wolrenn@outlook.com" }]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "diskcache>=5.6.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "requests-mock>=1.12.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-requests>=2.32.0",
]
server = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Wolren/WikiCitationFixer"
Source = "https://github.com/Wolren/WikiCitationFixer"

[tool.setuptools.packages.find]
include = ["wikifix*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wikifix.server"
disable_error_code = "untyped-decorator"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::UserWarning"]
